awx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: awx-ingress
  namespace: awx
  annotations:
    nginx.ingress.kubernetes.io/configuration-snippet: |   
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - {awx-host}
      secretName: {tls-name}
  rules:
    - host: {awx-host}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ansible-awx-service
                port:
                  number: 80
